# cimprov-test

./: .hgignore  .hgtags  CIM_AffectedJobElement.cpp  CIM_AffectedJobElement.h  CIM_AvailableDiagnosticService.cpp  CIM_AvailableDiagnosticService.h  CIM_Capabilities.cpp  CIM_Capabilities.h  CIM_Card.cpp  CIM_Card.h  CIM_Collection.cpp  CIM_Collection.h  CIM_CollectionOfMSEs.cpp  CIM_CollectionOfMSEs.h  CIM_Component.cpp  CIM_Component.h  CIM_ComputerSystem.cpp  CIM_ComputerSystem.h  CIM_ConcreteJob.cpp  CIM_ConcreteJob.h  CIM_ConnectorOnPackage.cpp  CIM_ConnectorOnPackage.h  CIM_Container.cpp  CIM_Container.h  CIM_ControlledBy.cpp  CIM_ControlledBy.h  CIM_Controller.cpp  CIM_Controller.h  CIM_Dependency.cpp  CIM_Dependency.h  CIM_DeviceConnection.cpp  CIM_DeviceConnection.h  CIM_DeviceSAPImplementation.cpp  CIM_DeviceSAPImplementation.h  CIM_DiagnosticCompletionRecord.cpp  CIM_DiagnosticCompletionRecord.h  CIM_DiagnosticLog.cpp  CIM_DiagnosticLog.h  CIM_DiagnosticRecord.cpp  CIM_DiagnosticRecord.h  (+330 more)
ci/: spektor.hh  tools.h
ci/app/: ctimer.h  net.h  rawpkt.h  sendmmsg.h  stats.h  utils.h
ci/compat/: gcc.h  gcc_ia64.h  gcc_ppc.h  ia64.h  sysdep.h  (+1 more)
cimple/: Adapter_Tracer.h  CimpleConfig.h  Error.h  Mutex.h  Provider_Handle.h  Registration.h  cimple.h  config.h  log.h  log_file_path.h  options.h  platform_LINUX.h  platform_WIN32_IX86_MSVC.h  platform_WIN64_X86_64_MSVC.h
cmpi/: cmpios.h
config/: config.dox  local-cim2.32.mk  local.mk
dependencies/: LICENSES
doc/: Doxyfile  mainpage.dox
esxi_sfupdate_client/: Makefile  Makefile.am  Makefile.in  README  cim_client.c  cim_client.h  configure  configure.ac  curl_aux.c  curl_aux.h  esxi_sfupdate_client.spec  fw_images.h  include_fw_imgs.pl  include_fw_imgs.sh  log.h  main.c  secure_getenv_fix.c  sfupdate.nsi  vsnprintf_fix.c
esxi_sfupdate_client/common/: efsys.h  efx.h
esxi_sfupdate_client/libs/linux/: README
esxi_sfupdate_client/libs/linux/64/: libcurl.la
esxi_sfupdate_client/libs/windows/: README
esxi_sfupdate_client/libs/windows/x86_64-w64-mingw32/: libcurl.la
esxi_sfupdate_client/libs_includes/: README
esxi_sfupdate_client/libs_includes/windows/i686-pc-mingw32/libxml/: xmlversion.h
esxi_sfupdate_client/libs_includes/windows/i686-pc-mingw32/ncurses/: curses.h
esxi_sfupdate_client/libs_includes/windows/i686-pc-mingw32/openssl/: opensslconf.h
esxi_sfupdate_client/libs_includes/windows/i686-w64-mingw32/ncurses/: term.h
esxi_sfupdate_client/libs_includes/windows/i686-w64-mingw32/openssl/: opensslconf.h
esxi_sfupdate_client/libs_includes/windows/x86_64-w64-mingw32/openssl/: opensslconf.h
esxi_solarflare/: Makefile.am.in  esxi_bootstrap.sh  esxi_bootstrap.sh.in  esxi_native_bootstrap.sh.in  fix_bulletin.pl  sources.mk
esxi_solarflare/solarflare/: configure.ac  solarflare.wsman
libcimobjects/: classes  classes.in  esxi_aux.mof  interop.mof  repository.mof  repository.mof.cpp  repository.mof.in  root.mof  sources.mk
libpciaccess/: common_bridge.c  common_device_name.c  common_vgaarb.c  linux_sysfs.c  sources.mk
libprovider/: SF_API_Provider.cpp  SF_API_Provider.h  SF_AffectedJobElement_Provider.cpp  SF_AffectedJobElement_Provider.h  SF_Alert_Provider.cpp  SF_Alert_Provider.h  SF_AvailableDiagnosticService_Provider.cpp  SF_AvailableDiagnosticService_Provider.h  SF_BundleComponent_Provider.cpp  SF_BundleComponent_Provider.h  SF_CardRealizesController_Provider.cpp  SF_CardRealizesController_Provider.h  SF_ChassisContainsCard_Provider.cpp  SF_ChassisContainsCard_Provider.h  SF_ComputerSystemPackage_Provider.cpp  SF_ComputerSystemPackage_Provider.h  SF_ComputerSystem_Provider.cpp  SF_ComputerSystem_Provider.h  SF_ConcreteJob_Provider.cpp  SF_ConcreteJob_Provider.h  SF_ConnectorOnNIC_Provider.cpp  SF_ConnectorOnNIC_Provider.h  SF_ConnectorRealizesController_Provider.cpp  SF_ConnectorRealizesController_Provider.h  SF_ConnectorRealizesPort_Provider.cpp  SF_ConnectorRealizesPort_Provider.h  SF_ControlledBy_Provider.cpp  SF_ControlledBy_Provider.h  SF_ControllerSoftwareIdentity_Provider.cpp  SF_ControllerSoftwareIdentity_Provider.h  SF_DiagElementSoftwareIdentity_Provider.cpp  SF_DiagElementSoftwareIdentity_Provider.h  SF_DiagnosticCompletionRecord_Provider.cpp  SF_DiagnosticCompletionRecord_Provider.h  SF_DiagnosticLogCapabilities_Provider.cpp  SF_DiagnosticLogCapabilities_Provider.h  SF_DiagnosticLog_Provider.cpp  SF_DiagnosticLog_Provider.h  SF_DiagnosticServiceCapabilities_Provider.cpp  SF_DiagnosticServiceCapabilities_Provider.h  (+161 more)
mk/: cim232.mk  def.mk  esxi.mk  faq.dox  host.mk  ibm.mk  identity.mk  interface-cmpi.mk  interface-pegasus.mk  pegasus-win.mk  platform-tpl.mk  rules-esxi.mk  rules-pegasus.mk  rules-reg.mk  rules-sfcb.mk  rules.mk  sample-sources.mk  server-esxi.mk  server-pegasus.mk  server-sfcb.mk  sfcb.mk  sles10.mk  tog-pegasus.mk  vars.mk  windows32.mk  windows64.mk  wmi.mk
pegasus/: sources.mk
presets/: default.mk  dell2970.mk  dibenchvm037.mk  esxi.mk  ibm.mk  ibm64.mk  intree-pegasus.mk  sles10-32-tar.mk  sles10-32-tar_ibm.mk  sles10-64-tar.mk  sles10-64-tar_ibm.mk  wmi.mk
qms/: wmi-provider-review.txt
scripts/: createtag  mk2dox.awk
sles10/: Makefile.in  libSolarflare.spec.in  sources.mk
testsuite/: README  association.py  defs.py  diag_profile.py  enum.py  namespace.py  phys_net_profile.py  profile.py  pywbem_setup.sh  pywmic.py  reg_profile.py  req_state_change.py  run.bat  run.sh  stress.py  sw_profile.py  test_association.py  test_associators_simple_check.py  test_classes.py  test_diag_profile.py  test_enumeration.py  test_lib.py  test_namespace.py  test_phys_net_profile.py  test_reference.py  test_reg_profile.py  test_req_state_change.py  test_stress.py  test_sw_profile.py  tester.py  tester_hlpr.py  tester_vars.py  tester_vars_default.py  tester_vars_esxi.py  tester_vars_ibm.py  tester_vars_wmi.py  vars.py  wmi_unsupp.py
tools/: Makefile  Makefile.bat  descriptor.xml  fetch_firmware_image.py  fetch_image.c  fetch_image.h  readme.txt  set_vm_ptp_privilege.py
wmihelper/: sources.mk  win32networkadapterconfiguration.h  win32networkprotocol.h  wmiinterface.h
(+558 files in other folders)
